--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["NikVolf <nikvolf@gmail.com>"]
 [dependencies]
 wasm-alloc = { path = "alloc" }
 tiny-keccak = "1.3"
+rustc-hex = "1.0.0"
 
 [dependencies.bigint]
 version = "4"
